@@ -351,6 +351,9 @@ abstract class Maintenance {
 		$this->addOption( 'wiki', 'For specifying the wiki ID', false, true );
 		$this->addOption( 'globals', 'Output globals at the end of processing for debugging' );
 		$this->addOption( 'memory-limit', 'Set a specific memory limit for the script, "max" for no limit or "default" to avoid changing it' );
+		$this->addOption( 'server', "The protocol and server name to use in URLs, e.g.\n" .
+							"\t\thttp://en.wikipedia.org. This is sometimes necessary because\n" .
+							"\t\tserver name detection may fail in command line scripts.", false, true );
 		// If we support a DB, show the options
 		if ( $this->getDbType() > 0 ) {
 			$this->addOption( 'dbuser', 'The DB user to use for this script', false, true );
@@ -693,7 +696,7 @@ abstract class Maintenance {
 	 * Handle some last-minute setup here.
 	 */
 	public function finalSetup() {
-		global $wgCommandLineMode, $wgShowSQLErrors;
+		global $wgCommandLineMode, $wgShowSQLErrors, $wgServer;
 		global $wgProfiling, $wgDBadminuser, $wgDBadminpassword;
 		global $wgDBuser, $wgDBpassword, $wgDBservers, $wgLBFactoryConf;
 
@@ -703,6 +706,11 @@ abstract class Maintenance {
 		}
 		# Same with these
 		$wgCommandLineMode = true;
+
+		# Override $wgServer
+		if( $this->hasOption( 'server') ) {
+			$wgServer = $this->getOption( 'server', $wgServer );
+		}
 
 		# If these were passed, use them
 		if ( $this->mDbUser ) {
