@@ -188,6 +188,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 23194) Special:ListFiles now has thumbnails
 * Use hreflang to specify canonical and alternate links, search engine friendly
   when a wiki has multiple variant languages.
+* (bug 19593) Specifying --server in now works for all maintenance scripts
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
